--- a/docs/sql-server/index.yml
+++ b/docs/sql-server/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: MashaMSFT
   ms.author: mathoma
   ms.date: 10/14/2019
-  ms.openlocfilehash: e5fc8f3df8974ebde59f1ed2443565a0ab538b5e
-  ms.sourcegitcommit: 8a8c89b0ff6d6dfb8554b92187aca1bf0f8bcc07
+  ms.openlocfilehash: 15ee670a0f489ab9922a90514d501bf177ec7fe1
+  ms.sourcegitcommit: d8cdbb719916805037a9167ac4e964abb89c3909
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/17/2020
-  ms.locfileid: "97617531"
+  ms.lasthandoff: 01/20/2021
+  ms.locfileid: "98595779"
 landingContent:
 - title: Azure 上の SQL
   linkLists:
@@ -41,7 +41,7 @@ landingContent:
     - text: データ移行ガイド
       url: https://datamigration.microsoft.com/
     - text: データ互換性証明書
-      url: https://aka.ms/dbcompat
+      url: ../database-engine/install-windows/compatibility-certification.md
     - text: Data Migration Assistant (DMA)
       url: ../dma/dma-overview.md
     - text: SQL Server Migration Assistant (SSMA)
@@ -55,7 +55,7 @@ landingContent:
     - text: SQL Server ビッグ データ クラスター
       url: ../big-data-cluster/big-data-cluster-overview.md
     - text: Azure Data Studio
-      url: ../azure-data-studio/what-is.md
+      url: ../azure-data-studio/what-is-azure-data-studio.md
     - text: Linux 上の SQL Server
       url: ../linux/sql-server-linux-overview.md
     - text: SQL Server for Azure Arc (プレビュー)
@@ -73,21 +73,21 @@ landingContent:
     - text: SQL Server Management Studio
       url: ../ssms/download-sql-server-management-studio-ssms.md
     - text: Azure Data Studio
-      url: ../azure-data-studio/download.md
+      url: ../azure-data-studio/download-azure-data-studio.md
   - linkListType: reference
     links:
     - text: Transact-SQL (T-SQL)
       url: ../t-sql/language-reference.md
     - text: SQL Server 2014 のドキュメント
-      url: https://docs.microsoft.com/sql/sql-server/sql-server-2014-release-notes
+      url: ./sql-server-2014-release-notes.md
     - text: 学習用 SQL リソース
       url: ../sql-server/educational-sql-resources.yml
     - text: サンプル データベース
-      url: https://docs.microsoft.com/sql/samples/sql-samples-where-are
+      url: ../samples/sql-samples-where-are.md
     - text: 内部とアーキテクチャのガイド
-      url: https://aka.ms/sqlserverguides
+      url: ../relational-databases/sql-server-guides.md
     - text: 以前のバージョン 2005-2012
-      url: https://docs.microsoft.com/sql/toc/previous-versions-sql-server
+      url: ./previous-versions-sql-server.md
 - title: ビジネス継続性
   linkLists:
   - linkListType: overview
@@ -171,7 +171,7 @@ landingContent:
     - text: パフォーマンス センター
       url: ../relational-databases/performance/performance-center-for-sql-server-database-engine-and-azure-sql-database.md
     - text: インテリジェントなクエリ処理
-      url: https://aka.ms/IQP
+      url: ../relational-databases/performance/intelligent-query-processing.md
     - text: 自動調整
       url: ../relational-databases/automatic-tuning/automatic-tuning.md
     - text: データベース チューニング アドバイザー
@@ -211,7 +211,7 @@ landingContent:
     - text: 分析プラットフォーム システム
       url: https://www.microsoft.com/sql/analytics-platform-system/
     - text: SQL Server Machine Learning (R と Python)
-      url: https://docs.microsoft.com/sql/machine-learning/
+      url: ../machine-learning/index.yml
     - text: Polybase によるデータ仮想化
       url: ../relational-databases/polybase/polybase-guide.md
 - title: ビジネス インテリジェンス
@@ -225,4 +225,4 @@ landingContent:
     - text: SQL Server Integration Services (SSIS)
       url: ../integration-services/sql-server-integration-services.md
     - text: Azure Data Factory
-      url: https://docs.microsoft.com/azure/data-factory/
+      url: /azure/data-factory/
