commit translated contents

--- a/docs/index.yml
+++ b/docs/index.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Hub
 title: Microsoft SQL ドキュメント
-summary: 'SQL Server と Azure SQL を使用し、オンプレミスとクラウドの両方で、お使いのデータベースのニーズを管理する方法について説明します。 (クイック リンク: https://aka.ms/sqldocs)'
+summary: SQL Server と Azure SQL を使用し、オンプレミスとクラウドの両方で、お使いのデータベースのニーズを管理する方法について説明します。
 brand: sql
 metadata:
   title: Microsoft SQL ドキュメント | Microsoft Docs
-  description: 'SQL Server と Azure SQL を使用し、オンプレミスとクラウドの両方で、お使いのデータベースのニーズを管理する方法について説明します。 (クイック リンク: https://aka.ms/sqldocs)'
+  description: SQL Server と Azure SQL を使用し、オンプレミスとクラウドの両方で、お使いのデータベースのニーズを管理する方法について説明します。
   ms.topic: hub-page
-  ms.openlocfilehash: 9e5ac2f53987c94f7a4fa84a55df23409861712e
-  ms.sourcegitcommit: d8cdbb719916805037a9167ac4e964abb89c3909
+  ms.openlocfilehash: 68ee871d0a5d758a2fcb205373e8f61d02656cb1
+  ms.sourcegitcommit: e4b6357756a9c691b0441208a0058f7b8f3bea51
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/20/2021
-  ms.locfileid: "98594369"
+  ms.lasthandoff: 02/03/2021
+  ms.locfileid: "99510333"
 highlightedContent:
   items:
   - title: SQL Server 2019 をお試しください
