--- a/docs/reporting-services/toc.yml
+++ b/docs/reporting-services/toc.yml
@@ -347,11 +347,11 @@
         - name: レポート サーバーのパフォーマンスの監視
           href: ../reporting-services/report-server/monitoring-report-server-performance.md
           items:
-            - name: MSRS 2011 Web Service と MSRS 2011 Windows Service パフォーマンス オブジェクトのパフォーマンス カウンター (ネイティブ モード)
+            - name: パフォーマンス カウンター、MSRS 2016 Web Service および MSRS 2016 Windows Service パフォーマンス オブジェクト (ネイティブ モード)
               href: ../reporting-services/report-server/performance-counters-msrs-2011-web-service-performance-objects.md
-            - name: MSRS 2011 Web Service SharePoint Mode と MSRS 2011 Windows Service SharePoint Mode パフォーマンス オブジェクトのパフォーマンス カウンター (SharePoint モード)
+            - name: パフォーマンス カウンター、MSRS 2016 Web Service SharePoint Mode および MSRS 2016 Windows Service SharePoint Mode パフォーマンス オブジェクト
               href: ../reporting-services/report-server/performance-counters-msrs-2011-sharepoint-mode-performance-objects.md
-            - name: 'ReportServer:Service と ReportServerSharePoint:Service パフォーマンス オブジェクトのパフォーマンス カウンター'
+            - name: 'パフォーマンス カウンター、ReportServer:Service および ReportServerSharePoint:Service パフォーマンス オブジェクト'
               href: ../reporting-services/report-server/performance-counters-reportserver-service-performance-objects.md
         - name: レポート処理プロパティの設定
           href: ../reporting-services/report-server/set-report-processing-properties.md
