--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -79,8 +79,6 @@ items:
             items:
               - name: 展開のガイダンス
                 href: big-data-cluster/deployment-guidance.md
-              - name: デプロイされるリソース
-                href: big-data-cluster/concept-architecture-pods.md
               - name: 新しいリリースにアップグレードする
                 href: big-data-cluster/deployment-upgrade.md
               - name: 展開をカスタマイズする
@@ -165,12 +163,14 @@ items:
         items:
           - name: 構成
             items:
-              - name: クラスター
-                href: big-data-cluster/configure-cluster.md
-              - name: SQL Server マスター インスタンス
-                href: big-data-cluster/configure-sql-server-master-instance.md
-              - name: Apache Spark と Apache Hadoop を構成する
-                href: big-data-cluster/configure-spark-hdfs.md
+              - name: 概要
+                href: big-data-cluster/configure-bdc-overview.md
+              - name: 構成管理対応クラスターへのアップグレード (CU9 以降)
+                href: big-data-cluster/bdc-upgrade-configuration.md
+              - name: デプロイ後の構成
+                href: big-data-cluster/configure-bdc-postdeployment.md
+              - name: 概要 - (CU9 より前)
+                href: big-data-cluster/configure-bdc-pre-configuration.md
           - name: データの仮想化
             items:
               - name: リレーショナル データ
@@ -465,6 +465,12 @@ items:
                 href: big-data-cluster/cluster-troubleshooter-notebooks.md
       - name: リファレンス
         items:
+          - name: デプロイ
+            items:
+              - name: オープンソース ソフトウェア
+                href: big-data-cluster/reference-open-source-software.md
+              - name: デプロイされるリソース
+                href: big-data-cluster/concept-architecture-pods.md
           - name: BDC パートナー
             href: sql-server/partner-big-data-cluster.md
           - name: 展開リファレンス
@@ -473,7 +479,9 @@ items:
                 href: big-data-cluster/reference-deployment-config.md
           - name: 構成
             items:
-              - name: マスター インスタンス
+              - name: 概要
+                href: big-data-cluster/reference-config-bdc-overview.md
+              - name: マスター インスタンス (CU9 より前)
                 href: big-data-cluster/reference-config-master-instance.md
               - name: Apache Spark と Apache Hadoop
                 href: big-data-cluster/reference-config-spark-hadoop.md
@@ -517,10 +525,16 @@ items:
                     href: azdata/reference/reference-azdata-bdc-gateway-status.md
                   - name: bdc hdfs
                     href: azdata/reference/reference-azdata-bdc-hdfs.md
+                  - name: bdc hdfs encryption zone
+                    href: azdata/reference/reference-azdata-bdc-hdfs-encryption-zone.md
+                  - name: bdc hdfs key
+                    href: azdata/reference/reference-azdata-bdc-hdfs-key.md
                   - name: bdc hdfs のマウント
                     href: azdata/reference/reference-azdata-bdc-hdfs-mount.md
                   - name: bdc hdfs status
                     href: azdata/reference/reference-azdata-bdc-hdfs-status.md
+                  - name: bdc settings
+                    href: azdata/reference/reference-azdata-bdc-settings.md
                   - name: bdc spark
                     href: azdata/reference/reference-azdata-bdc-spark.md
                   - name: bdc spark バッチ
@@ -12234,6 +12248,10 @@ items:
                 href: relational-databases/system-dynamic-management-views/sys-dm-hadr-availability-replica-cluster-states-transact-sql.md
               - name: sys.dm_hadr_availability_replica_states
                 href: relational-databases/system-dynamic-management-views/sys-dm-hadr-availability-replica-states-transact-sql.md
+              - name: sys.dm_hadr_ag_threads
+                href: relational-databases/system-dynamic-management-views/sys-dm-hadr-ag-threads-transact-sql.md
+              - name: sys.dm_hadr_db_threads
+                href: relational-databases/system-dynamic-management-views/sys-dm-hadr-db-threads-transact-sql.md
               - name: sys.dm_hadr_cluster
                 href: relational-databases/system-dynamic-management-views/sys-dm-hadr-cluster-transact-sql.md
               - name: sys.dm_hadr_cluster_members
