--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -465,7 +465,7 @@ items:
                 href: big-data-cluster/cluster-troubleshooter-notebooks.md
       - name: リファレンス
         items:
-          - name: デプロイ
+          - name: 展開
             items:
               - name: オープンソース ソフトウェア
                 href: big-data-cluster/reference-open-source-software.md
@@ -12528,6 +12528,8 @@ items:
                 href: relational-databases/system-dynamic-management-views/sys-dm-db-missing-index-groups-transact-sql.md
               - name: sys.dm_db_missing_index_group_stats
                 href: relational-databases/system-dynamic-management-views/sys-dm-db-missing-index-group-stats-transact-sql.md
+              - name: sys.dm_db_missing_index_group_stats_query
+                href: relational-databases/system-dynamic-management-views/sys-dm-db-missing-index-group-stats-query-transact-sql.md
           - name: I/O
             href: relational-databases/system-dynamic-management-views/i-o-related-dynamic-management-views-and-functions-transact-sql.md
             items:
