commit translated contents

--- a/docs/linux/new-to-linux-learning-resources.yml
+++ b/docs/linux/new-to-linux-learning-resources.yml
@@ -9,12 +9,12 @@ metadata:
   author: MashaMSFT
   ms.author: mathoma
   ms.date: 07/25/2020
-  ms.openlocfilehash: 77799aabb15567bea43ffa37d554962296650175
-  ms.sourcegitcommit: 917df4ffd22e4a229af7dc481dcce3ebba0aa4d7
+  ms.openlocfilehash: e3cd95f9fa2eeca27e4ae690def8ce36e83f60d9
+  ms.sourcegitcommit: 15c7cd187dcff9fc91f2daf0056b12ed3f0403f0
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 02/10/2021
-  ms.locfileid: "100078683"
+  ms.lasthandoff: 03/08/2021
+  ms.locfileid: "102464690"
 landingContent:
 - title: モジュール 1:SQL Server on Linux の概要
   linkLists:
@@ -37,7 +37,7 @@ landingContent:
     - text: サポートされているプラットフォーム
       url: sql-server-linux-release-notes-2019.md
     - text: よく寄せられる質問
-      url: sql-server-linux-faq.md
+      url: sql-server-linux-faq.yml
 - title: モジュール 3:インストールまたは配置と接続
   linkLists:
   - linkListType: learn
