--- a/docs/azure-data-studio/toc.yml
+++ b/docs/azure-data-studio/toc.yml
@@ -155,7 +155,7 @@
 - name: リソース
   items:
     - name: よく寄せられる質問
-      href: faq.md
+      href: faq.yml
     - name: トラブルシューティング
       href: troubleshooting.md
     - name: Azure Data Studio の GitHub リポジトリ >
