--- a/docs/connect/toc.yml
+++ b/docs/connect/toc.yml
@@ -2918,7 +2918,7 @@
           href: ../connect/odbc/linux-mac/install-microsoft-odbc-driver-sql-server-macos.md
         - name: 機能ガイド
           items:
-            - name: 接続文字列のキーワードとデータ ソース名 (DSN)
+            - name: Linux または macOS からの接続
               href: ../connect/odbc/linux-mac/connection-string-keywords-and-data-source-names-dsns.md
             - name: Linux と macOS での ODBC ドライバーによるデータ アクセスのトレース
               href: ../connect/odbc/linux-mac/data-access-tracing-with-the-odbc-driver-on-linux.md
